[project]
name = "aqua-chroma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.3",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "rasterio>=1.4.3",
    "requests>=2.32.5",
    "shapely>=2.1.2",
    "uvicorn>=0.38.0",
]
